fixed alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -138,6 +138,7 @@ body {
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
     display: flex;
     flex-direction: column;
+    height: 100%;
     max-width: 100%;
     box-sizing: border-box;
     margin: 0 auto 16px auto;
@@ -230,9 +231,12 @@ body {
     }
 
     .publication-data {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
         color: #000;
-        padding-top: 16px;
-        padding-bottom: 16px;
+        padding-top: 0px;
+        padding-bottom: 0px;
 
         .publication-title {
             width: fit-content;
@@ -301,7 +305,7 @@ body {
         .publication-description {
             color: #000;
             font-size: 14pt;
-            margin: 0.5em 0;
+            margin: 0.5em 0 0 0;
             word-wrap: break-word;
         }
     
@@ -309,7 +313,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
-    margin-top: 0.75rem;
+    margin-top: auto;
+    padding-top: 0;
 
     a, button {
         display: inline-flex;
